--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 name: CI
 
-env:
-  GLUALINT_VERSION: 1.19.1
+env:1.18.3
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
